# qt-sdl-box2d

./: CMakeLists.txt  README.md  conanfile.txt
src/: CMakeLists.txt  Example.cpp  Example.h  GraphicWidget.cpp  GraphicWidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/CAD/: CADOperator.h  CADOperatorMgr.cpp  CADOperatorMgr.h  CircleOperator.cpp  CircleOperator.h  CoordConverter.h  RectOperator.cpp  RectOperator.h  TriangleOperator.cpp  TriangleOperator.h
src/Core/: Log.cpp  Log.h
src/Graphic/: GraphicCircle.cpp  GraphicCircle.h  GraphicItem.cpp  GraphicItem.h  GraphicItemManager.cpp  GraphicItemManager.h  GraphicLine.cpp  GraphicLine.h  GraphicRect.cpp  GraphicRect.h  GraphicTriangle.cpp  GraphicTriangle.h  SDLWidget.cpp  SDLWidget.h
src/PhysicalEngine/: PhysicalEngine.cpp  PhysicalEngine.h
src/graphic/: GraphicItem.h  GraphicItemManager.cpp  GraphicItemManager.h  GraphicRect.cpp  GraphicRect.h  SDLWidget.cpp  SDLWidget.h
